--- a/index.html
+++ b/index.html
@@ -11,5 +11,16 @@
     <div id="root">
       <script type="module" src="src/scripts/main.ts"></script>
     </div>
+
+    <h1>Controls</h1>
+    <ul>
+        <li><p><em>Mouse Drag</em> - Scroll camera left or right</p></li>
+        <li><p><em>BLOCK Button</em> - Causes Lemming to warn other Lemmings to turn around. Number above represents number of uses.</p></li>
+        <li><p><em>DIG_SDWY Button</em> - Causes Lemming to dig sideways. Number above represents number of uses. </p></li>
+        <li><p><em>DIG_DOWN Button</em> - Causes Lemming to dig dowmwards. Number above represents number of uses. </p></li>
+        <li><p><em>PARACHUTE Button</em> - Causes Lemming to deploy a parachute on the next fall, allowing them to survive big falls. Number above represents number of uses.</p></li>
+        <li><p><em>SELF-DESTRUCT Button</em> - Causes Lemming to explode after 5 seconds, destroying blocks left, down and right of said Lemming. Has infinite uses.</p></li>
+        <li><p><em>Pause Menu - Pauses the game and allows restarting the level. Note that the main menu has not been implemented yet, so the button does nothing.</p></li>
+    </ul>
   </body>
 </html>
